=======
CHANGES
=======

0.8 (unreleased)
----------------

0.7.9 (2009-05-19)
------------------
- Updated translations [larubbio]

0.7.8 (2009-05-15)
------------------

- updated the way we get the version of the product, since there is no 
  more version file [lucielejard]

0.7.7 (2009-05-15)
------------------

- fixed the javascript, this fixes errors that were showing up in IE
- removed version.txt and replaced it by the metadata.xml,
- made sure the version is up to date [lucielejard]

0.7.6-1 (2009-05-12)
--------------------

- Add getpaid.formgen and getpaid.SalesforcePloneFormGenAdapter to plugins [larubbio]

0.7.6 (2009-05-12)
------------------

- Add variable amount donations [larubbio]
- Allow annotations on the shopping cart [larubbio]

0.7.5 (2009-03-13)
------------------

- updated brazilian portuguese translation [rafaelcrocha]
- updated the code so that we make sure we get the site root when checking
  out, otherwise we can't get the store settings
  

0.7.4 (2009-01-28)
------------------

* added the inclusion of getpaid.payflowpro if it is installed [lucielejard]
* added a viewlet provider on thank you page (belowcartthankyou) [flejard]


0.7.3 (2009-01-19)
------------------

* forced one of the shipping methods to be checked when buying a
  shippable item [lucielejard]

0.7.2 (2008-12-31)
------------------

* updated the portlet "add to cart" so that we can choose a quantity
  of items to add, this fixes issue 123 [lucielejard]
* added a provider spot on the "review and pay" page to be able to 
  hook a viewlet to it
* Added 2 fixes (for when you use the shipping system):
* gave a default value to the order.shipments, because it is never 
  set up to anything otherwise and you can't access your order,
* fixed the way we calculate the total, so that we have float numbers


0.7.1 (2008-11-24)
------------------

* fix: missing import for interface INamedOrderUtility [bruno.ripa]
* form update did not do as advertised - see  