@@ -241,9 +241,9 @@ class IGetPaidManagementShippingMethods( igetpaid.IPersistentOptions ):
 class IGetPaidManagementPaymentOptions( igetpaid.IPersistentOptions ):
     """
     """
-    payment_processor = schema.Choice( title = _(u"Payment Processor"),
-                                       source = "getpaid.payment_methods",
-                                       default = 'Testing Processor' )
+#    payment_processor = schema.Choice( title = _(u"Payment Processor"),
+#                                       source = "getpaid.payment_methods",
+#                                       default = 'Testing Processor' )
 
     allow_anonymous_checkout = schema.Bool( title=_(u"Allow Anonymous Checkout"), default=False)
 
